Apply suggestions from code review
Co-authored-by: Alexandra Winzek <alexandra.winzek@plentymarkets.com>

--- a/docs/de-de/modules/pos/pages/pos-einrichten.adoc
+++ b/docs/de-de/modules/pos/pages/pos-einrichten.adoc
@@ -663,7 +663,7 @@ Beachte auch, dass Zahlungsarten in einem weiteren Schritt für Kundenklassen er
 [TIP]
 .Zahlungsart Barverkauf/EC-Karte
 ====
-Stelle für die Zahlungsart *11 » Barverkauf/EC-Karte* außerdem im Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\] » Tab: Zahlungsart* die Option *Ohne Anbindung* im Bereich *EC-Terminal* ein.
+Stelle für die Zahlungsart *11 » Barverkauf/EC-Karte* außerdem im Menü *Einrichtung » POS » [Mandant wählen\] » [POS wählen\] » Tab: Zahlungsart* die Option *Ohne Anbindung* im Bereich *EC-Terminal* ein.
 ====
 
 [#1070]
