--- a/docs/de-de/modules/pos/pages/pos-rechtssicherheit.adoc
+++ b/docs/de-de/modules/pos/pages/pos-rechtssicherheit.adoc
@@ -188,7 +188,7 @@ Wenn du Kassen innerhalb mehrerer Mandanten betreibst, dürfen keine Kassen aus 
 |TSE-Einheit koppeln
 |Schließe deine Hardware an dein Kassensystem an. Daraufhin wird vom Bondrucker automatisch ein Beleg ausgegeben. +
 Öffne die plentymarkets App und klicke im Menü auf *Einstellungen*. Gib die IP-Adresse der TSE-Einheit ein, die auf dem Bon vermerkt ist. Tippe dann auf *TSE-Einheit koppeln*. +
-Im Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\]* wird im Tab *Grundeinstellungen* im Bereich *Fiskalisierung (Deutschland)* die *Seriennummer der TSE* und der *Public Key* der TSE nach der Kopplung automatisch eingetragen und gespeichert. Bei Bedarf kannst du die Daten hier einsehen und kontrollieren. Beachte bei der Verwendung eines Bondruckers der Marke Epson unsere <<#550, Hinweise>>.
+Im Menü *Einrichtung » POS » [Mandant wählen\] » [POS wählen\]* wird im Tab *Grundeinstellungen* im Bereich *Fiskalisierung (Deutschland)* die *Seriennummer der TSE* und der *Public Key* der TSE nach der Kopplung automatisch eingetragen und gespeichert. Bei Bedarf kannst du die Daten hier einsehen und kontrollieren. Beachte bei der Verwendung eines Bondruckers der Marke Epson unsere <<#550, Hinweise>>.
 
 |3.
 |Registrierung der TSE-Einheit beim Finanzamt
