--- a/docs/en-gb/modules/pos/pages/pos-legal-compliance.adoc
+++ b/docs/en-gb/modules/pos/pages/pos-legal-compliance.adoc
@@ -188,7 +188,7 @@ If you have booked several clients for your plentymarkets system and run POS wit
 |Linking a TSE unit
 |Link your hardware to your cash register system. The receipt printer automatically prints a test receipt after the TSE has been linked. +
 Open the plentymarkets app and click on *Settings* in the menu. Enter the IP address of the TSE unit that is printed on the test receipt. Tap *Link TSE unit*. +
-In the *Basic settings* tab of the *Setup » POS » [Select client\]* menu, the *TSE serial number* and the *Public key* of the TSE unit are automatically entered and saved in the *Fiscalisation (Germany)* area. If needed, you can view and check the data there. If you want to set up a receipt printer manufactured by Epson, pay attention to our <<#550, tips>>.
+In the *Basic settings* tab of the *Setup » POS » [Select client\] » [Select POS\]* menu, the *TSE serial number* and the *Public key* of the TSE unit are automatically entered and saved in the *Fiscalisation (Germany)* area. If needed, you can view and check the data there. If you want to set up a receipt printer manufactured by Epson, pay attention to our <<#550, tips>>.
 
 |3\.
 |Registering the TSE unit with tax authorities
