--- a/docs/en-gb/modules/automation/pages/procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/procedures.adoc
@@ -1272,7 +1272,18 @@ This procedure can be selected for the following work steps:
 [.subhead]
 Settings
 
-There are no additional settings for this procedure. The general settings for procedures are described in <<table-procedures-general-settings>>.
+<<table-procedure-delivery-note>> explains the additional settings for the procedure. The general settings for procedures are described in <<table-procedures-general-settings>>.
+
+[[table-procedure-delivery-note]]
+.*Delivery note* procedure
+[cols="1,3"]
+|===
+|Setting |Explanation
+
+| *Warehouse*
+|Select a warehouse from the drop-down list in order to create the delivery note for this warehouse only. If you do not select a warehouse, the delivery note is created for all warehouses.
+
+|===
 
 [.subhead]
 Procedures in case of error
