--- a/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
+++ b/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
@@ -19,9 +19,8 @@ Save data for every user account who is owner of the ticket system in the *Signa
 [IMPORTANT]
 .Note the priority of the signature
 ====
-The signature that was saved for a user in his or her user account takes priority over the xref:crm:sending-emails.adoc#600[signature] that is saved under *Setup » Client » [Select client] » Email » Signature*. +
-If you inserted the template variable `$SignatureHTML` in the email template, the signature that is saved in the user account is used. If no signature is saved in the user account, the signature that is saved in the *Setup » Client » [Select client] » Email » Signature* menu is used. +
-If you inserted the template variable `$SignatureText` in the email template, the signature that is saved in the *Setup » Client » [Select client] » Email » Signature* menu is always used.
+The signature that was saved for a user in his or her user account takes priority over the xref:crm:sending-emails.adoc#600[signature] that is saved in the *Email accounts* assistant in the *Signature* step. +
+*_This means:_* If you insert, for example, the variable `Signature in HTML format` or `Signature in plain text` in the email template, the signature is taken from the user account. If no signature is saved in the user account, the signature that is saved in the *Email accounts* assistant in the *Signature* step is used.
 ====
 
 [#400]
@@ -48,7 +47,7 @@ Refer to the chapter <<#650, Assigning rights for back end users for roles, stat
 
 Before you are able to use the ticket system, you have to carry out some basic settings in your system:
 
-* Create <<#700, roles>>, <<#800, types>>, <<#900, statuses>>, <<#1000, status groups>>, <<#1100, topics>> and <<#create-tags-ticket, tags>> for your ticket system.
+* Create <<#700, roles>>, <<#800, types>>, <<#900, statuses>>, <<#1000, status groups>>, <<#1100, topics>> and <<#create-tags-tickets, tags>> for your ticket system.
 
 * Set up your <<#2100, email account>> in the *Setup » CRM » Ticket system » Email accounts* menu to ensure that your emails are automatically converted into tickets. 
 
@@ -215,7 +214,7 @@ Setting up the email account:
 [IMPORTANT]
 .Observe test mode
 ====
-After you have carried out all tests, you have to deactivate the test mode in the *Setup » Client » [Select client] » Email » Login details* menu. If you do not deactivate the test mode, tickets are only sent to the email address that is saved in the *Setup » CRM » Ticket system » Email accounts* menu.
+After you have carried out all tests, you have to activate the live mode in the *Email accounts* assistant in the *Login details* step. If you do not deactivate the test mode, tickets are only sent to the email address that is saved in the *Setup » CRM » Ticket system » Email accounts* menu.
 ====
 
 [[table-set-up-email-account]]
@@ -311,7 +310,7 @@ The email despatch is _not_ affected by this.
 As a workaround, you can set up a new inbox at another provider and transfer the emails to this inbox.
 --
 
-[#create-tags-ticket]
+[#create-tags-tickets]
 === Creating tags for tickets
 
 Tags are keywords that you create centrally before you can use them in different areas of your plentymarkets system. How to use tags with tickets and which user rights are required is explained below.
@@ -384,10 +383,10 @@ This is a mandatory field. If no owner is selected, the ticket cannot be created
 This is a mandatory field. If no title is selected, the ticket cannot be created.
 
 | *Tags*
-|Click to add tags. You can select the tags that you set up in the *Setup » Settings » Tags* menu. For further information, refer to the <<#create-tags-ticket, Creating tags for tickets>> chapter.
+|Click to add tags. You can select the tags that you set up in the *Setup » Settings » Tags* menu. For further information, refer to the <<#create-tags-tickets, Creating tags for tickets>> chapter.
 
 | *Folder*
-|Select a folder from the drop-down list. You can select the x<<#4500, folders>> that you created in the *CRM » Ticket system* menu.
+|Select a folder from the drop-down list. You can select the <<#4500, folders>> that you created in the *CRM » Ticket system* menu.
 
 | *Priority*
 |Select the priority from the drop-down list.
@@ -444,7 +443,7 @@ If the ticket is not linked to a customer, it is not possible to send the email 
 |If you activate *Show list of owners*, the area *Owner* is shown on the right side of the ticket. All owners of the tickets as well as their roles are displayed.
 
 | *Hide / Show tags*
-|If you activate *Show tags*, the area *Tags* is shown on the right side of the ticket. Further <<#create-tags-ticket, tags>> that were created before in the *Setup » Settings » Tags* menu can be added here. You can add as many tags for a ticket as you like.
+|If you activate *Show tags*, the area *Tags* is shown on the right side of the ticket. Further <<#create-tags-tickets, tags>> that were created before in the *Setup » Settings » Tags* menu can be added here. You can add as many tags for a ticket as you like.
 
 |====
 
@@ -493,7 +492,7 @@ Integrate contact forms in your plentyShop so that interested people and custome
 
 In order that the tickets are created in your system and you can afterwards directly reply from within the ticket, you have to set up a valid email account in the *Setup » CRM » Ticket system » Email accounts* menu.
 
-You receive an email notification whenever a new message is received. This notification is separate from the ticket and any procedures that are carried out in the ticket system. The notification is sent to the address that was saved under *Setup » Client » [Select client] » Email » Login details*. You receive this email notification even if you did not book the ticket system.
+You receive an email notification whenever a new message is received. This notification is separate from the ticket and any procedures that are carried out in the ticket system. The notification is sent to the email address that was saved in the *Email accounts* assistant in the *Login details* step. You receive this email notification even if you did not book the ticket system.
 
 [TIP]
 .Example for using the contact form
@@ -521,7 +520,6 @@ Creating tickets from forms:
 . Decide if you want to show a checkbox for accepting the privacy policy in your form.
 . *Save* (icon:save[]) the settings. +
 → Every time a visitor in your online shop fills in a form and sends it, a ticket will be created in your plentymarkets system.
-
 
 [IMPORTANT]
 .Assignment based solely on email addresses
@@ -785,6 +783,7 @@ For further information about customer communication in the ticket system, refer
 
 For further information on how to set up event procedures, refer to the xref:automation:event-procedures.adoc#[Event procedures] page of the manual.
 
+
 [discrete]
 === Setting up the event procedure “New ticket message”
 
@@ -931,7 +930,7 @@ Creating a general ticket template:
 |Only visible if the setting *User roles* was selected under *Visibility*. Activate the user roles that should be able to see the template.
 
 | *Tags*
-|Select tags to create a template with these tags. <<#create-tags-ticket, Tags>> are created in the *Setup » Settings » Tags* menu.
+|Select tags to create a template with these tags. <<#create-tags-tickets, Tags>> are created in the *Setup » Settings » Tags* menu.
 
 | *Deadline*
 |Enter the number of days. Tickets that are created with this template have a deadline that is this many days after the ticket is created.
@@ -994,7 +993,7 @@ Above the ticket overview in the *CRM » Ticket system* menu in the *Tickets* ta
 | *Search options*
 |You can use the drop-down lists to create individual search options and only display those tickets in the overview that you want to see or edit. Select for example only tickets of a certain owner and with a certain priority. +
 Click on *Search* to display the tickets with the selected search options. +
-For further information about the search options, refer to the <<#3400, Searching for tickets>> chapter.
+For further information about the search options, refer to the chapter <<#3400, Searching for tickets>>.
 
 | *Age in days*
 |Different colours indicate how old the tickets are. The colours have the following meaning: +
@@ -1040,7 +1039,7 @@ Searching for tickets:
 
 | *Type/Status*
 |Search using a combination of ticket type and ticket status. Select one, multiple or all options from the drop-down list. +
-Go to *Setup » CRM » Ticket system » Settings* to edit existing <<#800, types>> and <<#900, statuses>> or to create new ones.
+Go to *Setup » CRM » Ticket system » Settings* to edit existing <<#800, types>> and <<#900, statuses>> and to create new ones.
 
 | *Status group*
 |Select one, multiple or all options from the drop-down list. +
