try if formatting fix works

--- a/docs/de-de/modules/pos/pages/pos-einrichten.adoc
+++ b/docs/de-de/modules/pos/pages/pos-einrichten.adoc
@@ -52,7 +52,7 @@ Um plentyPOS verwenden zu können, link:https://www.plentymarkets.com/de/produkt
 
 Nachdem du Kassen gebucht hast, dauert es zunächst zwei bis drei Minuten, bis der Aktivierungsprozess im Hintergrund abgeschlossen ist. Logge dich dann aus deinem plentymarkets System aus und wieder ein. Dieser Schritt ist auch notwendig, wenn du bereits Kassen eingerichtet hast und im Nachhinein eine oder mehrere neue Kassen hinzubuchst.
 
-Anschließend richtest du die Kassen im plentymarkets Backend ein. Zunächst weist du die Kassen einem Mandanten zu, indem du die Kasse im Menü *Einrichtung » POS » [Mandant wählen\]* erstellst und weitere Einstellungen vornimmst. Gehe dazu wie unten beschrieben vor.
+Anschließend richtest du die Kassen im plentymarkets Backend ein. Zunächst weist du die Kassen einem Mandanten zu, indem du die Kasse im Menü *Einrichtung » POS » [Mandant wählen]* erstellst und weitere Einstellungen vornimmst. Gehe dazu wie unten beschrieben vor.
 
 [WARNING]
 .POS-Einstellungen nicht im laufenden Betrieb ändern
@@ -68,7 +68,7 @@ Erstelle zunächst im plentymarkets Backend eine Kasse für den gewünschten Man
 [.instruction]
 Kasse für Mandanten erstellen:
 
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen]*.
 . Klicke auf *Neue Kasse*. +
 → Das Fenster *Neue Kasse* wird eingeblendet.
 . Gib einen Namen für die Kasse ein.
