--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -55,8 +55,8 @@ Du kannst die folgenden Auftragstypen als Kindaufträge anlegen: +
 * Teillieferung
 * Vorbestellung
 
-** Für alle Artikel: Alle Artikel werden jeweils mit der maximal verfügbaren Anzahl automatisch zum Warenkorb hinzugefügt.
-** Für bestimmte Artikel: Die Tabelle des Warenkorbs ist zunächst leer, d.h. die gewünschten Artikel müssen manuell hinzugefügt werden.
+** Für alle Auftragspositionen: Alle Artikel werden jeweils mit der maximal verfügbaren Anzahl automatisch zum Warenkorb hinzugefügt.
+** Für bestimmte Auftragspositionen: Die Tabelle des Warenkorbs ist zunächst leer, d.h. die gewünschten Artikel müssen manuell hinzugefügt werden.
 ** Automatisch aufteilen (Nur beim Typ Lieferauftrag): Die Artikel werden je nach Einstellungen automatisch aufgeteilt.
 
 | *Warenausgang buchen*
