--- a/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
@@ -33,7 +33,7 @@ Gutschriftauftrag anlegen:
 . Öffne den Auftrag, zu dem du eine Gutschrift anlegen möchtest.
 . Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]) > *Gutschrift*.
 . Wähle eine Option. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>.
-. Wählst du die Option *Für bestimmte Artikel*, nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-create-credit-note>>.
+. Wählst du die Option *Für bestimmte Auftragspositionen*, nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-create-credit-note>>.
 . *Speichere* (material:save[]) die Einstellungen. +
 → Der Gutschriftauftrag wird angelegt.
 
