--- a/docs/de-de/modules/auftraege/pages/order-type-repair.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-repair.adoc
@@ -43,7 +43,7 @@ Gehe wie unten beschrieben vor, um eine Reparatur anzulegen:
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne die Retoure, zu der du eine Reparatur anlegen möchtest.
 . Klicke oben in der Toolbar auf *Aufträge erstellen* > *Reparatur*.
-. Wähle die Option *Für bestimmte Artikel*. +
+. Wähle die Option *Für bestimmte Auftragspositionen*. +
 → Die Übersicht zum Anlegen der Reparatur wird geöffnet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-settings-repair>>.
 . *Speichere* (material:save[]) die Einstellungen. +
