--- a/docs/de-de/modules/pos/pages/pos-einrichten.adoc
+++ b/docs/de-de/modules/pos/pages/pos-einrichten.adoc
@@ -262,7 +262,7 @@ Gehe wie unten beschrieben vor, um Varianten als Favoriten zu speichern.
 [.instruction]
 Varianten als Favoriten speichern:
 
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen]*.
 . Öffne die Kasse.
 . Wechsele in das Tab *Favoriten*.
 . Öffne das Tab *Variante hinzufügen*. +
@@ -286,7 +286,7 @@ Die Priorität der Favoriten legst du über die Pfeilsymbole des Tabs *Favoriten
 [.instruction]
 Reihenfolge der Favoriten ändern:
 
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen]*.
 . Öffne die Kasse.
 . Öffne das Tab *Favoriten*. +
 → Die Liste der Varianten auf der Favoritenliste wird angezeigt.
@@ -302,7 +302,7 @@ Die Favoritenliste einer Kasse kann auf andere Kassen des Mandanten übertragen 
 [.instruction]
 Favoriten auf andere Kassen übertragen:
 
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen]*.
 . Öffne die Kasse.
 . Öffne das Tab *Favoriten*. +
 → Die Liste der Varianten auf der Favoritenliste wird angezeigt.
@@ -320,7 +320,7 @@ Gehe wie unten beschrieben vor, um Varianten aus der Liste der Favoriten zu lös
 [.instruction]
 Varianten aus Liste der Favoriten löschen:
 
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen]*.
 . Öffne die Kasse.
 . Öffne das Tab *Favoriten*. +
 → Die Liste der Varianten auf der Favoritenliste wird angezeigt.
@@ -335,7 +335,7 @@ Im Tab *Beleg* der Kasseneinstellungen bestimmst du die Daten, die auf Belegen a
 [.instruction]
 Belegvorlage bearbeiten:
 
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen]*.
 . Öffne die Kasse.
 . Wechsele in das Tab *Beleg*.
 . Aktiviere die Komponenten, die auf Belegen der Kasse angezeigt werden sollen.
@@ -663,7 +663,7 @@ Beachte auch, dass Zahlungsarten in einem weiteren Schritt für Kundenklassen er
 [TIP]
 .Zahlungsart Barverkauf/EC-Karte
 ====
-Stelle für die Zahlungsart *11 » Barverkauf/EC-Karte* außerdem im Menü *Einrichtung » POS » [Mandant wählen\] » [POS wählen\] » Tab: Zahlungsart* die Option *Ohne Anbindung* im Bereich *EC-Terminal* ein.
+Stelle für die Zahlungsart *11 » Barverkauf/EC-Karte* außerdem im Menü *Einrichtung » POS » [Mandant wählen] » [POS wählen] » Tab: Zahlungsart* die Option *Ohne Anbindung* im Bereich *EC-Terminal* ein.
 ====
 
 [#1070]
@@ -944,7 +944,7 @@ a|
 * Ja
 * Nein
 
-|Einrichtung » POS » [Mandant wählen\] » [Kasse öffnen\] » Tab: Beleg
+|Einrichtung » POS » [Mandant wählen] » [Kasse öffnen] » Tab: Beleg
 |Identische Auftragspositionen
 a|
 * Einzeln darstellen
@@ -1037,7 +1037,7 @@ Standardkunden für Kassenaufträge erstellen:
 . Klicke auf *Neuen Kontakt erstellen*.
 . Nimm die Einstellungen gemäß <<table-POS-default-customer>> vor.
 . *Speichere* (icon:save[role="darkGrey"]) die Einstellungen.
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\] » [Kasse öffnen] » Grundeinstellungen*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen] » [Kasse öffnen] » Grundeinstellungen*.
 . Gib die ID des Standardkunden in das Feld *Standardkunde* ein.
 . *Speichere* (icon:save[role="darkGrey"]) die Einstellungen.
 
@@ -1099,7 +1099,7 @@ Die erforderlichen Einstellungen werden in <<table-POS-dummy-item>> kurz erläut
 | *Umsatzsteuer*
 |Gib den Umsatzsteuersatz ein, der für den Dummy-Artikel gelten soll.
 
-2+^| *Einrichtung » POS » [Mandant wählen\] » [Kasse öffnen\]*
+2+^| *Einrichtung » POS » [Mandant wählen] » [Kasse öffnen]*
 
 | *Preisabfrage wenn Artikelpreis 0*
 |Aktiviere die Option.
@@ -1337,7 +1337,7 @@ Optional kann ein Gutscheinbeleg erstellt und gedruckt werden. Der Gutscheinbele
 [.instruction]
 Drucken von Gutscheinbelegen aktivieren:
 
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen]*.
 . Öffne die Kasse.
 . Wechsele in das Tab *Beleg*.
 . Aktiviere die Option *Gutscheinbeleg drucken und speichern*.
@@ -1649,7 +1649,7 @@ Optional kann ein Gutscheinbeleg erstellt und gedruckt werden. Der Gutscheinbele
 [.instruction]
 Drucken von Gutscheinbelegen aktivieren:
 
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen]*.
 . Öffne die Kasse.
 . Wechsele in das Tab *Beleg*.
 . Aktiviere die Option *Gutscheinbeleg drucken und speichern*.
@@ -1721,7 +1721,7 @@ Gutscheinartikel für Retouren erstellen:
 [.instruction]
 Gutscheinartikel für Retouren mit Kasse verknüpfen:
 
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen]*.
 . Öffne die Kasse. +
 → Das Tab *Grundeinstellungen* wird angezeigt.
 . Aktiviere die Option *Gutschein über Retourenbetrag erzeugen*. +
@@ -2264,7 +2264,7 @@ Bei Kassen mit Standort Österreich, bei denen die Sicherheitseinrichtung aktivi
 [.instruction]
 Kasse löschen:
 
-. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen]*.
 . Klicke auf die Kasse. +
 → Das Tab *Grundeinstellungen* der Kasse wird geöffnet.
 . Klicke oben links auf *Löschen*. +
