--- a/docs/en-gb/modules/pos/pages/pos-online-orders.adoc
+++ b/docs/en-gb/modules/pos/pages/pos-online-orders.adoc
@@ -134,7 +134,7 @@ As a final step, specify how stock levels of online orders are to be treated whe
 [.instruction]
 Determine stock movements for online orders:
 
-. Go to *Setup » POS » [Select client\]*.
+. Go to *Setup » POS » [Select client]*.
 . Open the POS. +
 → The *Settings* tab opens.
 . The option *External order: Book outgoing items automatically* is activated by default. Thus, items are booked out of the warehouse automatically after the payment has been made. Deactivate the option to book out items only if the POS user taps the *Book outgoing items* button. +
