--- a/docs/de-de/modules/external-online-shops/pages/shopify-app.adoc
+++ b/docs/de-de/modules/external-online-shops/pages/shopify-app.adoc
@@ -61,6 +61,7 @@ Assistent *Shopify-Konfiguration* durchlaufen:
 .Optionen im Assistenten
 --
 [[table-shopify-configuration-assistant]]
+.Shopify-Konfiguration
 [width="100%"]
 [cols="1,2a"]
 |======
@@ -127,6 +128,7 @@ Assistent zur *Eingabefeldzuordnung* durchlaufen:
 .Optionen im Assistenten
 --
 [[table-input-field-mapping]]
+.Eingabefeldzuordnung
 [width="100%"]
 [cols="1,2a"]
 |======
@@ -219,7 +221,7 @@ Aufgrund von Vorgaben der Datenschutzgrundverordnung (DSGVO) wurden die im Folge
 [[table-gdpr-considerations]]
 .Berücksichtigung der DSGVO für Kontaktimport
 [cols="1,2"]
-|====
+|===
 |*Szenario* |*Erläuterung*
 
 | *Kund:in wird als Gast importiert*
@@ -232,6 +234,7 @@ Aufgrund von Vorgaben der Datenschutzgrundverordnung (DSGVO) wurden die im Folge
 
 | *Ein bestehender plentymarkets Kontakt wird mit dem importierten Auftrag verknüpft*
 | Es wird geprüft, ob eine Kund:in von Shopify mit dieser externen Kontakt-ID bereits in der Vergangenheit importiert wurde. Ist dies der Fall, wird der neue Auftragsimport diesem Kontakt zugeordnet.
+|===
 
 [#110]
 === Weitere Shopify-Shops verknüpfen
