fix collapse box

--- a/docs/de-de/modules/fulfillment/partials/ebay-fulfillment-by-orange-connex.adoc
+++ b/docs/de-de/modules/fulfillment/partials/ebay-fulfillment-by-orange-connex.adoc
@@ -114,8 +114,7 @@ Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinr
 |====
 |Einstellung |Erläuterung
 
-2+| Wie lauten die Server-Daten deines Anbieters? +
-Gib den Postausgangsserver / SMTP-Server und den Port ein und wähle die Verschlüsselungsmethode aus der Liste. Diese Daten bekommst du von deinem E-Mail-Anbieter.
+2+| Wie lauten die Server-Daten deines Anbieters?
 
 | *Postausgangsserver/SMTP-Server*
 |Gib den Postausgangsserver wie vom Provider angegeben ein (meist smtp.domain.de oder mail.domain.de). +
@@ -146,16 +145,18 @@ Gib den Postausgangsserver / SMTP-Server und den Port ein und wähle die Verschl
 |Gib das Passwort zu dem Benutzer:innenname und der E-Mail-Adresse ein.
 
 2+|Möchtest du den E-Mail-Versand jetzt testen? +
-Mit einem Klick auf material:outgoing_mail[] wird eine Test-E-Mail an die oben eingegebene E-Mail-Adresse gesendet.
 
-2+|Möchtest du den Live-Modus aktivieren? +
-Während der Einrichtung ist der Live-Modus deaktiviert. Das heißt, ausgehende E-Mails werden nur an die oben eingegebene E-Mail-Adresse gesendet, damit du den E-Mail-Versand testen kannst. Wenn du mit dem Einrichten deines Systems fertig bist, solltest du den Live-Modus aktivieren, damit E-Mails an deine Kund:innen gesendet werden können.
+|material:outgoing_mail[] 
+|Mit einem Klick auf material:outgoing_mail[] wird eine Test-E-Mail an die oben eingegebene E-Mail-Adresse gesendet.
 
-|(material:check_box_outline_blank[])
-|Wenn du kein Häkchen bei *Live-Modus aktivieren* setzt (material:check_box_outline_blank[]), ist der Testmodus aktiviert. + Alle E-Mails werden nur an die eingegebene E-Mail-Adresse gesendet. So kannst du vor dem Live-Betrieb die korrekte Funktionsweise prüfen. +
+2+|Möchtest du den Live-Modus aktivieren? 
+
+|material:check_box_outline_blank[]
+|Wenn du kein Häkchen bei *Live-Modus aktivieren* setzt (material:check_box_outline_blank[]), ist der Testmodus aktiviert. +
+Alle E-Mails werden nur an die eingegebene E-Mail-Adresse gesendet. So kannst du vor dem Live-Betrieb die korrekte Funktionsweise prüfen. +
 *_Wichtig:_* Der Testmodus gilt nur für diesen Webshop. Die Einstellungen für weitere Mandanten werden im Menü des Mandanten (Shops) konfiguriert.
 
-|(material:check_box[role=skyBlue])
+|material:check_box[role=skyBlue]
 |Wenn du ein Häkchen bei *Live-Modus aktivieren* setzt (material:check_box[role=skyBlue]), ist der Live-Modus aktiviert.
 
 |====
