--- a/docs/en-gb/modules/crm/pages/sending-emails.adoc
+++ b/docs/en-gb/modules/crm/pages/sending-emails.adoc
@@ -48,8 +48,7 @@ In the *Email accounts* assistant in the *Setup » Assistants » Basic setup* me
 |====
 |Setting |Explanation
 
-2+| Enter the server details of your email provider. +
-Enter the outgoing mail server / SMTP server and the port and select the encryption method from the list. You can obtain this data from your email provider.
+2+| Enter the server details of your email provider.
 
 | *Outgoing mail server/SMTP server*
 |Enter the outgoing mail server as specified by the provider (usually smtp.domain.co.uk or mail.domain.co.uk). +
@@ -63,7 +62,7 @@ Enter the outgoing mail server / SMTP server and the port and select the encrypt
 | Select *SSL*, *TLS* or *No encryption*.  +
 *_mailbox.org:_* For mailbox.org mailboxes, enter port *465* and select the encryption method *SSL*.
 
-2+| Enter the login details of your email account. 
+2+| Enter the login details of your email account 
 
 | *Name of sender*
 |Enter your own name or the name of your plentyShop. The name is displayed to the recipient. +
@@ -79,17 +78,18 @@ Enter the outgoing mail server / SMTP server and the port and select the encrypt
 | *Password*
 |Enter the password that matches the user name and email address.
 
-2+|Would you like to test the email despatch now? +
-Click on material:outgoing_mail[] to send a test email to the email address entered above.
+2+|Would you like to test the email despatch now?
 
-2+|Would you like to activate the live mode? +
-During setup, the live mode is deactivated. This means that outgoing emails are sent only to the email address that was entered above. This allows you to test the email despatch. After you have finished setting up your system, you should activate the live mode in order that emails can be sent to your customers.
+|material:outgoing_mail[]
+|Click on material:outgoing_mail[] to send a test email to the email address entered above.
 
-|(material:check_box_outline_blank[])
+2+|Would you like to activate the live mode?
+
+|material:check_box_outline_blank[]
 |If you do not place a check mark for *Activate live mode* (material:check_box_outline_blank[]), the test mode is activated. + All emails are only sent to the saved email address. This allows you to test the settings before switching to the live mode. +
 *_Important:_* The test mode is only applied to this online shop. The settings for additional clients (shops) are carried out in the client’s menu.
 
-|(material:check_box[role=skyBlue])
+|material:check_box[role=skyBlue]
 |If you place a check mark for *Activate live mode* (material:check_box[role=skyBlue]), the live mode is activated.
 
 |====
