ADD coupon documents (#1100)
* ADD coupon documents

* ADJUST voucher info

* ADD group function create doc

--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -79,6 +79,11 @@ Im Bearbeitungsmodus (terra:design_inline_edit[role="darkGrey"]) der Auftragsüb
 | *Versanddatum für Auftragsposition setzen*
 |material:pending_actions[]
 |Setzt ein Versanddatum für die Auftragsposition aller gewählten Aufträge. Gib ein Versanddatum ein oder wähle ein Datum über den Kalender (material:today[]).
+
+| *Dokument erstellen*
+|material:note_add[]
+|Erstellt ein Dokument für alle gewählten Aufträge. Wähle einen Dokumenttyp aus der Dropdown-Liste. Gib außerdem ein Erstellungsdatum für das Dokument ein oder wähle ein Datum über den Kalender (material:today[]).
+
 |===
 
 == Weitere Funktionen in der Auftragsübersicht nutzen
@@ -946,6 +951,12 @@ Im Bereich *Dokumente* siehst du alle vorhandenen sowie archivierten Dokumente d
 | *Kontextmenü* (material:more_vert[])
 |Über das Kontextmenü kannst du ein Dokument herunterladen (material:file_download[]).
 |===
+
+[NOTE]
+.Gutschein-Dokumente
+======
+Hast du verkaufte Gutscheine oder Vouchers, werden diese ebenfalls in den Dokumenten angezeigt. Bei Dokumenten vom Typ *Gutschein* handelt es sich also nicht um Gutscheine, die im Auftrag eingelöst wurden, sondern um Gutscheine, die mit diesem Auftrag verkauft wurden. Über das Kontextmenü (material:more_vert[]) kann ein Gutschein mit Klick auf *Neu erzeugen* (material:restore_page[]) neu erzeugt werden.
+======
 
 [#area-history]
 === Bereich: Historie
