--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -78,6 +78,11 @@ In the editing mode (terra:design_inline_edit[role="darkGrey"]) of the order ove
 | *Set order item shipping date*
 |material:pending_actions[]
 |Sets a shipping date for the order item of all selected orders. Enter a shipping date or selected a date via the calendar (material:today[]).
+
+| *Create document*
+|material:note_add[]
+|Creates a document for all selected orders. Select a document type from the drop-down list and enter a creation date for the document or select a date from the calendar (material:today[]).
+
 |===
 
 == Using further functions in the order overview
@@ -945,6 +950,12 @@ In the *Documents* area you can see all available and archived documents of your
 | *Context menu* (material:more_vert[])
 |You can download (material:file_download[]) a document via the context menu.
 |===
+
+[NOTE]
+.Coupon documents
+======
+In case there are sold coupons or vouchers, they are also displayed in the documents. Thus, documents of the type *Coupon* are not coupons that have been redeemed in the order, but coupons that have been sold with this order. Via the context menu (material:more_vert[]), you can *Recreate* (material:restore_page[]) a coupon.
+======
 
 [#area-history]
 === Area: History
