--- a/docs/de-de/modules/artikel/pages/import-export-anlage-verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/import-export-anlage-verzeichnis.adoc
@@ -451,12 +451,6 @@ Beachte, dass das Limit für den gesamten Artikel gilt, also für alle Varianten
 . Nimm weitere Einstellungen vor. Beachte <<table-upload-item-image>>.
 . *Speichere* (terra:save[role="green"]) die Einstellungen.
 
-[TIP]
-.Willst du viele Bilder hochladen?
-====
-Große Mengen an Bildern kannst du statt im plentymarkets Backend auch xref:artikel:bilder.adoc#600[per FTP-Server hochladen].
-====
-
 [[table-upload-item-image]]
 .Artikelbild hochladen
 [cols="1,4a"]
@@ -533,6 +527,11 @@ a|Für jedes hochgeladene Artikelbild legt plentymarkets folgende Versionen an:
 * Zwei Vorschaubilder
 
 Das Quellbild muss mindestens die unter xref:artikel:bilder.adoc#500[Größen] festgelegte Bildgröße haben, da plentymarkets Bilder nicht größer rechnet. Größere Bilder werden auf die festgelegte Größe skaliert.
+
+| *Originalbilder*
+|Originalbilder sind nach dem Hochladen nicht mehr zugänglich.
+Wenn du ein Bild hochlädst, generiert plentymarkets daraus die Bildgrößen, die per URL zugänglich sind.
+Das Originalbild wird nicht mehr zugänglich sein, auch nicht per URL.
 |===
 
 [#94]
