--- a/docs/en-gb/modules/item/pages/directory.adoc
+++ b/docs/en-gb/modules/item/pages/directory.adoc
@@ -260,8 +260,7 @@ For example, assign the green t-shirt image to the green t-shirt variation.
 
 [cols="1,3"]
 |===
-
-2+^| *_Technical specifications_*
+2+^| Technical specifications
 
 | *File formats*
 |The file formats supported for images are: PNG, JPG, GIF, SVG
@@ -285,6 +284,12 @@ a|Every time an item image is uploaded, plentymarkets creates the following vers
 * Two preview images
 
 Since plentymarkets does not scale up images, the source image must have at least the size and quality specified in the xref:item:images.adoc#500[Sizes] area. Larger images will be scaled down to the specified size.
+
+| *Original images*
+|Original images are no longer accessible after they have been uploaded.
+When you upload an image, plentymarkets uses it to generate the image sizes that are accessible via URL.
+The original image will no longer be accessible - also not via URL.
+
 |===
 
 ---
