CHANGE note about set function to be more specific

--- a/docs/de-de/modules/artikel/pages/import-export-anlage-verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/import-export-anlage-verzeichnis.adoc
@@ -1643,6 +1643,12 @@ a|Für jedes hochgeladene Artikelbild legt plentymarkets folgende Versionen an:
 * Zwei Vorschaubilder
 
 Das Quellbild muss mindestens die unter xref:artikel:bilder.adoc#500[Größen] festgelegte Bildgröße haben, da plentymarkets Bilder nicht größer rechnet. Größere Bilder werden auf die festgelegte Größe skaliert.
+
+| *Originalbilder*
+|Originalbilder sind nach dem Hochladen nicht mehr zugänglich.
+Wenn du ein Bild hochlädst, generiert plentymarkets daraus die Bildgrößen, die per URL zugänglich sind.
+Das Originalbild wird nicht mehr zugänglich sein, auch nicht per URL.
+
 |===
 
 [#340]
