--- a/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
+++ b/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
@@ -356,12 +356,14 @@ a| * S und blau
 |===
 
 [IMPORTANT]
-.Set-Funktion ist mit plentyShop LTS Version 5.0 und höher kompatibel
+.Set-Funktion ist nur für den plentyShop vorgesehen
 ====
-Es ist möglich, Artikel-Sets im link:https://marketplace.plentymarkets.com/plugins/sales/online-shops/ceres_4697[plentyShop LTS] Version 5.0 und höher zu verkaufen.
+
+* Die Set-Funktion ist mit link:https://marketplace.plentymarkets.com/plugins/sales/online-shops/ceres_4697[plentyShop LTS] Version 5.0 und höher kompatibel.
 Niedrigere Versionen von plentyShop LTS unterstützen die Set-Funktion nicht.
-Die Set-Funktion ist nur für den plentyShop vorgesehen.
-Es ist nicht möglich, Artikel-Sets auf Märkten wie Amazon und eBay zu verkaufen.
+* Es ist _nicht möglich_, Artikel-Sets auf Märkten wie Amazon und eBay zu verkaufen.
+* Es ist _nicht möglich_, Artikel-Sets mit POS zu verkaufen oder mit der App zu kommissionieren.
+
 ====
 
 [#3100]
