--- a/docs/en-gb/modules/item/pages/combining-products.adoc
+++ b/docs/en-gb/modules/item/pages/combining-products.adoc
@@ -352,12 +352,14 @@ a| * S and blue
 |====
 
 [IMPORTANT]
-.Set function is compatible with plentyShop LTS version 5.0 and higher
+.Set function is only intended for the plentyShop
 ====
-It's possible to sell item sets with link:https://marketplace.plentymarkets.com/en/plugins/sales/online-shops/ceres_4697[plentyShop LTS] version 5.0 and higher.
+
+* The set function is compatible with link:https://marketplace.plentymarkets.com/en/plugins/sales/online-shops/ceres_4697[plentyShop LTS] version 5.0 and higher.
 Lower versions of plentyShop LTS do not support the set function.
-The set function is only intended for the plentyShop.
-It’s not possible to sell item sets on marketplaces like Amazon and eBay.
+* It's _not possible_ to sell item sets on marketplaces like Amazon and eBay.
+* It's _not possible_ to sell item sets with POS or pick them with the app.
+
 ====
 
 [#3100]
