--- a/docs/en-gb/modules/item/pages/import-export-create-directory.adoc
+++ b/docs/en-gb/modules/item/pages/import-export-create-directory.adoc
@@ -1591,6 +1591,12 @@ a|Every time an item image is uploaded, plentymarkets creates the following vers
 * Two preview images
 
 Since plentymarkets does not scale up images, the source image must have at least the size and quality specified in the xref:item:images.adoc#500[Sizes] area. Larger images will be scaled down to the specified size.
+
+| *Original images*
+|Original images are no longer accessible after they have been uploaded.
+When you upload an image, plentymarkets uses it to generate the image sizes that are accessible via URL.
+The original image will no longer be accessible - also not via URL.
+
 |====
 
 [#340]
