--- a/docs/de-de/modules/external-online-shops/pages/shopify-app.adoc
+++ b/docs/de-de/modules/external-online-shops/pages/shopify-app.adoc
@@ -1,14 +1,14 @@
 = Shopify verknüpfen
 :keywords: Shopify, plentymarkets App, Shopify Assistent, Shopify Shops, Shopify verbinden
 :description: Erfahre, wie du dein plentymarkets Konto mit Shopify verknüpfst, um deine Daten zu synchronisieren.
-:author: team-import-export
+:author: team-plenty-channel
 
 Auf dieser Seite erfährst du, wie du dein plentymarkets Konto mit Shopify verknüpfst, um deine Daten zwischen beiden Systemen zu synchronisieren. Die beiden Assistenten leiten dich durch alle notwendigen Schritte, damit du direkt durchstarten kannst.
 
 [#10]
 == Über Shopify
 
-Genau wie plentymarkets, ist auch Shopify eine vollumfängliche E-Commerce-Plattform, mit der du dein Online-Business starten, stetig ausbauen und verwalten kannst. Da Shopify vollständig cloud-basiert und -gehostet ist, brauchst du dich nicht um das Aktualisieren oder Warten von Software oder Webservern zu kümmern.
+Genau wie plentymarkets ist auch Shopify eine vollumfängliche E-Commerce-Plattform, mit der du dein Online-Business starten, stetig ausbauen und verwalten kannst. Da Shopify vollständig cloud-basiert und -gehostet ist, brauchst du dich nicht um das Aktualisieren oder Warten von Software oder Webservern zu kümmern.
 
 [#20]
 == Bei Shopify registrieren
