Added translation for Amazon report types

--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -314,22 +314,22 @@ Eine Übersicht über alle Berichtstypen von Amazon-Berichten findest du in der 
 |===
 | Berichtstyp | Wozu dient der Bericht?
 
-| GET_FBA_MYI_UNSUPPRESSED_INVENTORY_DATA
+| Lagerbestand mit Versand durch Amazon
 | * Bestandsabgleich für FBA-Bestand
 
 | GET_FBA_MYI_ALL_INVENTORY_DATA
 | * Bestandsabgleich für FBA-Bestand
 
-| GET_AFN_INVENTORY_DATA
+| Von Amazon versandter Lagerbestand
 | * Bestandsabgleich für FBA-Bestand
 
-| GET_FBA_FULFILLMENT_CUSTOMER_RETURNS_DATA
+| „Versand durch Amazon“-Kundenrücksendungen
 | * Importieren von FBA-Retouren
 
-| GET_AMAZON_FULFILLED_SHIPMENTS_DATA_INVOICING
+| Von Amazon versandte Sendungen – Steuerabrechnung - EU
 | * Importieren von FBA-Aufträgen für EU-Verkäufer
 
-| GET_AMAZON_FULFILLED_SHIPMENTS_DATA_TAX
+| Von Amazon versandte Sendungen – Steuerabrechnung - NA
 | * Importieren von FBA-Aufträgen für nordamerikanische Verkäufer
 
 | GET_FLAT_FILE_VAT_INVOICE_DATA_REPORT
@@ -344,10 +344,10 @@ Eine Übersicht über alle Berichtstypen von Amazon-Berichten findest du in der 
 | SC_VAT_TAX_REPORT
 | * Korrigieren und Importieren externer Rechnungen und Gutschriften auf Basis von VCS/VCS Amazon
 
-| GET_ORDER_REPORT_DATA_INVOICING
+| MFN XML Auftragsbericht - Steuerabrechnung - EU
 | * Importieren von FBM-Aufträgen für EU-Verkäufer
 
-| GET_ORDER_REPORT_DATA_TAX
+| MFN XML Auftragsbericht - Steuerabrechnung - NA
 | * Importieren von FBM-Aufträgen für nordamerikanische Verkäufer
 
 | GET_ORDER_REPORT_DATA_SHIPPING
