Deleted outdated info about setting up OAuth2

--- a/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
@@ -88,13 +88,7 @@ Konto löschen:
 Für die eBay OAuth2-Authentifizierung benötigst du ein gültiges xref:business-entscheidungen:ssl-zertifikat_bestellen.adoc#1200[SSL-Zertifikat].
 ====
 
-Viele Calls laufen bereits über die neuen APIs von eBay. Diese neuen APIs basieren auf der Authentifizierungsmethode OAuth2 statt auf der bisherigen Auth-n-Auth-Methode. Die neue Authentifizierungsmethode OAuth2 wird für immer mehr essentielle Abläufe benötigt. Deshalb solltest du bereits bei der eBay-Einrichtung dein eBay-Konto für OAuth2 authentifizieren.
-
-[IMPORTANT]
-.OAuth2 bald zwingend erforderlich
-====
-Aufgrund einer Umstellung bei eBay werden Prozesse, die eBay-Rahmenbedingungen betreffen, bald nicht mehr ohne OAuth2 funktionieren. Schalte deshalb jetzt schon ein eBay-Konto für OAuth2 frei, wenn noch nicht geschehen.
-====
+OAuth2 ist eine neue Authentifizierungsmethode, die für immer mehr essentielle Abläufe und Prozesse bei eBay benötigt wird. Deshalb solltest du bereits bei der eBay-Einrichtung dein eBay-Konto für OAuth2 authentifizieren.
 
 ==== Konten freischalten und bearbeiten
 
