--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -88,13 +88,7 @@ Deleting an account:
 You need a valid xref:business-decisions:ssl-certificate.adoc#1200[SSL certificate] for the eBay OAuth2 authentication.
 ====
 
-Many calls already use the new eBay APIs. Those new APIs are based on the authentication method OAuth2 instead of the Auth-n-Auth method which was used before. The new authentication method OAuth2 is needed for more and more essential processes. Therefore, you should already authenticate your eBay accounts for OAuth2 when setting up eBay in plentymarkets.
-
-[IMPORTANT]
-.OAuth2 will become mandatory
-====
-Due to an adjustment on the part of eBay, processes relating to eBay business policies will soon not work any longer without OAuth2. Therefore you have to authenticate your eBay accounts for OAuth2 if you have not already done so.
-====
+OAuth2 is a new authentication method that is needed for more and more essential eBay processes. Therefore, you should already authenticate your eBay accounts for OAuth2 when setting up eBay in plentymarkets.
 
 ==== Activating and changing accounts
 
