Added info about stock buffer

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -552,6 +552,18 @@ include::partial$kaufland-recommended-mappings.adoc[]
 
 Jeder Marktplatz strukturiert Artikeldaten anders. Deshalb treten beim Zuordnen von Datenfeldern bestimmte Sonderfälle auf. In diesem Kapitel findest du Hinweise dazu, was du beim Zuordnen von Datenfeldern für Kaufland beachten solltest.
 
+[#bestandspuffer]
+===== Bestandspuffer
+
+In den Katalogen für Kaufland kannst du einen *Bestandspuffer* verwenden. Mit einem Bestandspuffer gibst du die Menge eines Artikels an, die nicht verkauft, sondern als Puffer einbehalten werden soll. +
+Um einen Bestandspuffer für Kaufland zu verwenden, verknüpfe das Datenfeld *Bestandspuffer* in deinen Kaufland-Katalogen. Der Bestandspuffer wird dann beim Bestandsabgleich und beim Erstellen eines neuen Angebots berücksichtigt.
+
+Empfohlene Zuordnung für das Datenfeld *Bestandspuffer*:
+
+ * *Eigener Wert*: Wert eintragen, der als Bestandspuffer verwendet werden soll. Trägst du hier beispielsweise *5* ein, werden 5 Artikel vom Bestand für Kaufland abgezogen und als Puffer einbehalten.
+
+ * Eigenschaft an Variante, Typ *Text* oder *ganze Zahl*
+
 [#groesseneinheit-kaufland]
 ===== Größeneinheit als eigenen Wert für Länge, Breite und Höhe angeben
 
