--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -562,6 +562,8 @@ Empfohlene Zuordnung für das Datenfeld *Bestandspuffer*:
 
  * *Eigener Wert*: Wert eintragen, der als Bestandspuffer verwendet werden soll. Trägst du hier beispielsweise *5* ein, werden 5 Artikel vom Bestand für Kaufland abgezogen und als Puffer einbehalten.
 
+ _oder_
+
  * Eigenschaft an Variante, Typ *Text* oder *ganze Zahl*
 
 [#groesseneinheit-kaufland]
