--- a/docs/de-de/modules/webshop/pages/faq-lts.adoc
+++ b/docs/de-de/modules/webshop/pages/faq-lts.adoc
@@ -5,11 +5,10 @@
 :author: team-webshop
 
 ////
-zuletzt bearbeitet 14.09.22
+zuletzt bearbeitet 19.09.22
 ////
 
 // TODO: Alle FAQs aus Forum importieren
-// ToDo: Put it in the Nav
 
 Auf dieser Seite findest du einige häufig gestellte Fragen rund um plentyShop LTS.
 
@@ -126,10 +125,35 @@ Diesen Textbaustein passt du an den folgenden beiden Stellen an:
 
 --
 
+[.collapseBox]
+.*Ich möchte eine Datei in meinem CMS » Webspace hochladen, allerdings dauert es sehr lange bis ich den Webspace öffnen kann. Auch das Hochladen einer Datei dauert sehr lange. Woran kann das liegen?*
+--
+
+Eine hohe Anzahl an Dateien im Webspace kann die Performance nachteilig beeinflussen.
+Versuche deine Dateien in Unterordnern zu verwalten, um die Menge an gleichzeitig angezeigten Dateien zu verringern. 
+Beachte, dass eine Datei im Webspace nicht über 10 MB groß sein darf.
+Beachte beim Upload-Prozess, dass du maximal 10 Dateien auf einmal hochladen kannst.
+
+--
+
+[.collapseBox]
+.*In meinem plentyShop werden veraltete Daten angezeigt. Wieso werden meine Änderungen nicht live im Shop angezeigt?*
+--
+Falls du den *ShopBooster* nutzt, musst du den Cache möglicherweise einmal selbst invalidieren. Wie das geht, erfährst du auf der xref:webshop:ceres-einrichten#sofort-invalidieren[plentyShop LTS Handbuchseite].
+
+--
+
 ////
 [#frequent-questions]
 == 
 ////
+[.collapseBox]
+.*Wie gehe ich am besten bei einem Update von plentyShop LTS vor?*
+--
+
+Am besten hältst du dich beim Updaten von plentyShop LTS an link:https://knowledge.plentymarkets.com/de-de/manual/main/webshop/best-practices.html#updates[diesen Best Practice^].
+
+--
 
 [.collapseBox]
 .*Wie tausche ich das Firmenlogo aus?*
@@ -151,9 +175,8 @@ Achte auf die Sichtbarkeit des Headers. Wenn du unterschiedliche Header im Einsa
 --
 
 [.collapseBox]
-.*Wie gehe ich am besten bei einem Update von plentyShop LTS vor?*
+.* Wie kann ich einstellen, welche Variante auf der Artikelkachel in der Kategorie angezeigt wird?*
 --
-
-Am besten hältst du dich beim Updaten von plentyShop LTS an link:https://knowledge.plentymarkets.com/de-de/manual/main/webshop/best-practices.html#updates[diesen Best Practice^].
+Welche Variante auf der Artikelkachel gezeigt wird, kannst du mit der Einstellung *Sortierung der Varianten für die Artikelkachel* im plentyShop LTS Assistenten einstellen. Die Einstellung findest du im Schritt *Seitennummerierung und Sortierung*.
 
 --
