--- a/docs/de-de/modules/auftraege/pages/dokumentenarchiv-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/dokumentenarchiv-testphase.adoc
@@ -16,7 +16,7 @@ Folgende Dokumenttypen sind im Dokumentenarchiv verfügbar:
 [.col-md-4]
 .In plentymarkets erzeugte Auftragsdokumente
 =====
-* xref:auftraege:abhollieferung-erzeugen.adoc#[Abhollieferung]
+* xref:auftraege:abhollieferung-erzeugen.adoc#[Abhollieferungen]
 * xref:auftraege:dokument-angebot-erzeugen.adoc#[Angebote]
 * xref:auftraege:auftragsbestaetigung-erzeugen.adoc#[Auftragsbestätigungen]
 * *Externe Gutschriften*
@@ -26,7 +26,7 @@ Folgende Dokumenttypen sind im Dokumentenarchiv verfügbar:
 * xref:auftraege:korrekturbeleg-erzeugen.adoc#[Korrekturbelege]
 * xref:auftraege:lieferscheine-erzeugen.adoc#[Lieferscheine]
 * xref:auftraege:mahnungen-erzeugen.adoc#[Mahnungen]
-* xref:warenwirtschaft:nachbestellungen-vornehmen.adoc#140[Nachbestellung]
+* xref:warenwirtschaft:nachbestellungen-vornehmen.adoc#140[Nachbestellungen]
 * xref:warenwirtschaft:umbuchungen-vornehmen.adoc#800[PO Lieferscheine]
 * xref:auftraege:proformarechnung-erzeugen.adoc#[Proformarechnungen]
 * xref:auftraege:rechnungen-erzeugen.adoc#[Rechnungen]
@@ -42,27 +42,27 @@ Folgende Dokumenttypen sind im Dokumentenarchiv verfügbar:
 [.col-md-4]
 .POS-Dokumente
 =====
-* xref:pos:pos-einrichten.adoc#1000[Kassenbeleg]
-* xref:pos:pos-kassenbenutzer.adoc#210[Kassengutscheinbeleg]
+* xref:pos:pos-einrichten.adoc#1000[Kassenbelege]
+* xref:pos:pos-kassenbenutzer.adoc#210[Kassengutscheinbelege]
 * xref:pos:pos-einrichten.adoc#400[Kassenjournal]
-* xref:pos:pos-kassenbenutzer.adoc#210[Kassenrechnung]
-* xref:pos:pos-kassenbenutzer.adoc#210[Kassenstornierung]
-* xref:pos:pos-kassenbenutzer.adoc#210[Kassenstornorechnung]
+* xref:pos:pos-kassenbenutzer.adoc#210[Kassenrechnungen]
+* xref:pos:pos-kassenbenutzer.adoc#210[Kassenstornierungen]
+* xref:pos:pos-kassenbenutzer.adoc#210[Kassenstornorechnungen]
 * xref:pos:pos-kassenbenutzer.adoc#450[Kassensturz]
-* xref:pos:pos-kassenbenutzer.adoc#230[Tagesabschlussbericht/Z-Report]
+* xref:pos:pos-kassenbenutzer.adoc#230[Tagesabschlussberichte/Z-Report]
 =====
 
 [.col-md-4]
 .Sonstige Dokumente
 =====
-* *Abrechnungsbericht*
-* xref:payment:bankdaten-verwalten.adoc#70[EBICS INI-Brief]
-* *Exportdokument*
-* *Externes Dokument*
+* *Abrechnungsberichte*
+* xref:payment:bankdaten-verwalten.adoc#70[EBICS INI-Briefe]
+* *Exportdokumente*
+* *Externe Dokumente*
 * xref:auftraege:gutscheine.adoc#[Gutscheine]
-* *Retourenetikett*
-* xref:payment:bankdaten-verwalten.adoc#220[SEPA-Lastschriftmandat]
-* *Versandetikett*
+* *Retourenetiketten*
+* xref:payment:bankdaten-verwalten.adoc#220[SEPA-Lastschriftmandate]
+* *Versandetiketten*
 =====
 ====
 
