Added Amazon Belgium to list of Amazon platforms

--- a/docs/en-gb/modules/markets/pages/best-practices-amazon-error-request-throttled.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practices-amazon-error-request-throttled.adoc
@@ -21,16 +21,17 @@ If you use a European or North American marketplace account at Amazon, this erro
 
 Amazon platforms which are usually summarised in one European marketplace account (as of 3 March 2021):
 
+* Amazon.ae
+// * Amazon.bel
 * Amazon.de
+* Amazon.co.uk
+* Amazon.es
 * Amazon.fr
 * Amazon.it
-* Amazon.es
-* Amazon.co.uk
 * Amazon.nl
 * Amazon.pl
 * Amazon.se
 * Amazon.tr
-* Amazon.ae
 
 Amazon platforms which are usually summarised in one North American marketplace account (as of 1 January 2021):
 
